# remote-worker

./: .env  .python-version  Dockerfile  docker-compose.yml  mesh.Dockerfile  pyproject.toml
libs/remote-worker-core/: pyproject.toml
libs/remote-worker-core/src/remote_worker_core/: __init__.py
libs/remote-worker-instantmesh/: pyproject.toml
libs/remote-worker-instantmesh/src/remote_worker_instantmesh/: __init__.py  remote.py
src/remote_worker/: __init__.py  config.py
