[project]
authors = [
  {name = "Jonathan Scheer", email = "jonatron@gmail.com"},
]
dependencies = [
  "rq>=2.3.1",
]
description = "Add your description here"
name = "remote-worker"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
