[project]
name = "remote-worker-instantmesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Scheer", email = "jonatron@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "remote-worker-core",
]

[project.scripts]
instantmesh = "remote_worker_instantmesh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
